--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,14 +11,14 @@
 	<groupId>com.yavaarnosi</groupId>
 	<artifactId>yavaarnosi-api</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<organization>
-		<name>yavaarnosi</name>
-	</organization>
+
 	<name>spring-boot-example</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 		<docker.username>yavaar19</docker.username>
+		<docker.image.name>yavaarnosi-api</docker.image.name>
+		<docker.image.tag/>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -180,7 +180,7 @@
 						</platforms>
 					</from>
 					<to>
-						<image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+						<image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
 						<tags>
 							<tag>latest</tag>
 						</tags>
