--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - name: Deployment started Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Deployment started:battery:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - uses: actions/checkout@v3
@@ -52,14 +52,14 @@ jobs:
         run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GITHUB_OUTPUT
       - name: Building Maven Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Building Maven:maven:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Build Package Push with Maven
         run: mvn -ntp -B verify -D docker.image.tag=${{steps.build-number.outputs.BUILD_NUMBER}} jib:build
       - name: Image tag with new Build Number Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to Docker:docker:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Update Dockerrun.aws.json api image tag with new build number
@@ -71,7 +71,7 @@ jobs:
           cat Dockerrun.aws.json
       - name: Starting Deployment to EB Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Starting Deployment to Elastic Beanstalk:aws:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Deploy to Elastic Beanstalk
@@ -87,7 +87,7 @@ jobs:
           deployment_package: backend/Dockerrun.aws.json
       - name: Committing to Github repo Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Committing to Github repo:github:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Commit and push Dockerrun.aws.json
@@ -99,6 +99,6 @@ jobs:
           git push
       - name: Deployment completed Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
+          curl && curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Deployment completed:check1:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
