--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -34,7 +34,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Deployment started Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, EXIT!"}' https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json'
+          --data '
+          {"text":"Deployment started:battery:"}
+          '
+          ${{ secrets.SLACK_WEBHOOK_URL }}
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -50,14 +54,14 @@ jobs:
         run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GITHUB_OUTPUT
       - name: Building Maven Slack Message
         run: >
-          curl && curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Building Maven:maven:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Build Package Push with Maven
         run: mvn -ntp -B verify -D docker.image.tag=${{steps.build-number.outputs.BUILD_NUMBER}} jib:build
       - name: Image tag with new Build Number Slack Message
         run: >
-          curl && curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to Docker:docker:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Update Dockerrun.aws.json api image tag with new build number
@@ -69,7 +73,7 @@ jobs:
           cat Dockerrun.aws.json
       - name: Starting Deployment to EB Slack Message
         run: >
-          curl && curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Starting Deployment to Elastic Beanstalk:aws:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Deploy to Elastic Beanstalk
@@ -85,7 +89,7 @@ jobs:
           deployment_package: backend/Dockerrun.aws.json
       - name: Committing to Github repo Slack Message
         run: >
-          curl && curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Committing to Github repo:github:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Commit and push Dockerrun.aws.json
@@ -97,6 +101,6 @@ jobs:
           git push
       - name: Deployment completed Slack Message
         run: >
-          curl && curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json'
           --data '{"text":"Deployment completed:check1:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
