CD Workflow with new controller - Attempt 28

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -34,11 +34,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Deployment started Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '
-          {"text":"Deployment started:battery:"}
-          '
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+#          curl -X POST -H 'Content-type: application/json'
+#          --data '
+#          {"text":"Deployment started:battery:"}
+#          '
+#          https://hooks.slack.com/services/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
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -54,16 +55,20 @@ jobs:
         run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GITHUB_OUTPUT
       - name: Building Maven Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Building Maven:maven:"}'
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+
+      #          curl -X POST -H 'Content-type: application/json'
+#          --data '{"text":"Building Maven:maven:"}'
+#          https://hooks.slack.com/services/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
       - name: Build Package Push with Maven
         run: mvn -ntp -B verify -D docker.image.tag=${{steps.build-number.outputs.BUILD_NUMBER}} jib:build
       - name: Image tag with new Build Number Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to Docker:docker:"}'
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+
+      #          curl -X POST -H 'Content-type: application/json'
+#          --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to Docker:docker:"}'
+#          https://hooks.slack.com/services/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
       - name: Update Dockerrun.aws.json api image tag with new build number
         run: |
           echo "Dockerrun.aws.json before updating tag"
@@ -73,9 +78,11 @@ jobs:
           cat Dockerrun.aws.json
       - name: Starting Deployment to EB Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Starting Deployment to Elastic Beanstalk:aws:"}'
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+
+      #          curl -X POST -H 'Content-type: application/json'
+#          --data '{"text":"Starting Deployment to Elastic Beanstalk:aws:"}'
+#          https://hooks.slack.com/services/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
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
         with:
@@ -89,9 +96,11 @@ jobs:
           deployment_package: backend/Dockerrun.aws.json
       - name: Committing to Github repo Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Committing to Github repo:github:"}'
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+
+      #          curl -X POST -H 'Content-type: application/json'
+#          --data '{"text":"Committing to Github repo:github:"}'
+#          https://hooks.slack.com/services/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
       - name: Commit and push Dockerrun.aws.json
         run: |
           git config user.name github-actions
@@ -101,6 +110,7 @@ jobs:
           git push
       - name: Deployment completed Slack Message
         run: >
-          curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Deployment completed:check1:"}'
-          https://hooks.slack.com/services/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
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}' https://hooks.slack.com/services/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
+#          curl -X POST -H 'Content-type: application/json'
+#          --data '{"text":"Deployment completed:check1:"}'
+#          https://hooks.slack.com/services/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
