CD Workflow with new controller - Attempt 31

--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -31,12 +31,12 @@ jobs:
         working-directory: ./backend
 
     steps:
-      - uses: actions/checkout@v3
       - name: Deployment started Slack Message
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Deployment started:battery:"}'
+          --data '{"text":"Deployment started :progress_bar: :fingerscrossed:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
+      - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -53,14 +53,14 @@ jobs:
       - name: Building Maven Slack Message
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Building Maven:maven:"}'
+          --data '{"text":"Building Maven :maven:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Build Package Push with Maven
         run: mvn -ntp -B verify -D docker.image.tag=${{steps.build-number.outputs.BUILD_NUMBER}} jib:build
       - name: Image tag with new Build Number Slack Message
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to Docker:docker:"}'
+          --data '{"text":"Image tag: ${{steps.build-number.outputs.BUILD_NUMBER}} pushed to https://hub.docker.com/repository/docker/yavaar19/yavaarnosi-api :docker:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Update Dockerrun.aws.json api image tag with new build number
         run: |
@@ -72,7 +72,7 @@ jobs:
       - name: Starting Deployment to EB Slack Message
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Starting Deployment to Elastic Beanstalk:aws:"}'
+          --data '{"text":"Starting Deployment to Elastic Beanstalk :aws:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v21
@@ -88,7 +88,7 @@ jobs:
       - name: Committing to Github repo Slack Message
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Committing to Github repo:github:"}'
+          --data '{"text":"Committing to Github repo :githubloading:"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Commit and push Dockerrun.aws.json
         run: |
@@ -98,7 +98,8 @@ jobs:
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
           git push
       - name: Deployment completed Slack Message
+        if: always()
         run: >
           curl -X POST -H 'Content-type: application/json'
-          --data '{"text":"Deployment completed:check1:"}'
+          --data '{"text":"Job Status ${{ job.status }}"}'
           ${{ secrets.SLACK_WEBHOOK_URL }}
