--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -97,6 +97,11 @@ jobs:
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
           git push
+      - name: Deployment and Comit Completed Slack Message
+        run: >
+          curl -X POST -H 'Content-type: application/json'
+          --data '{"text":"Deployment and commit completed :github_check_mark: :party_blob: - ${{ EB_ENVIRONMENT_URL }}"}'
+          ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: Deployment completed Slack Message
         if: always()
         run: >
