--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
     networks:
       - postgres
     restart: unless-stopped
-  yavaarnosi-api:
-    container_name: yavaarnosi-api
-    image: yavaar19/yavaarnosi-api
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/customer
-    ports:
-      - "8088:8080"
-    networks:
-      - postgres
-    depends_on:
-      - db
-    restart: unless-stopped
+#  yavaarnosi-api:
+#    container_name: yavaarnosi-api
+#    image: yavaar19/yavaarnosi-api
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/customer
+#    ports:
+#      - "8088:8080"
+#    networks:
+#      - postgres
+#    depends_on:
+#      - db
+#    restart: unless-stopped
 
 networks:
   postgres:
