--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,18 @@ services:
     depends_on:
       - db
     restart: unless-stopped
+  yavaarnosi-frontend-react:
+    container_name: yavaarnosi-react
+    image: yavaar19/yavaarnosi-react
+    build:
+      context: frontend/react
+      args:
+        api_base_url: http://localhost:8088
+    ports:
+      - "3000:5173"
+    depends_on:
+      - yavaarnosi-api
+    restart: unless-stopped
 
 networks:
   postgres:
