--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,13 @@ target/
 
 ### NetBeans ###
 /nbproject/private/
-#/nbbuild/
+/nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-#build/
-#!**/src/main/**/build/
-#!**/src/test/**/build/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 
 ### VS Code ###
