--- a/.github/workflows/frontend-react-cd.yml
+++ b/.github/workflows/frontend-react-cd.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Docker Build and push
         run: |
           chmod +x ../../.ci/build-publish.sh
-          USERNAME=yavaar19 \
+          USERNAME=${{ secrets.DOCKERHUB_USERNAME }} \
           REPO=yavaarnosi-react \
           TAG=${{ steps.build-number.outputs.BUILD_NUMBER }} \
           ../../.ci/build-publish.sh . \
