--- a/frontend/react/package.json
+++ b/frontend/react/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
